--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </p>
     <head>Contact Infomation</head>
     <ul>
-        <li>Email: arroyoj3@uci.edu</li> 
+        <li>Email: <a href="mailto:arroyoj3@uci.edu">arroyoj3@uci.edu</a>
         <li>Github: <a href="https://github.com/javiarroyo-6">javiarroyo-6</a>
         <li>Portfolio: coming soon </li>
     </ul>
